# dbt-bootcamp-northwind

./: README.md  pyproject.toml
northwind/: dbt_project.yml  test-log.txt
northwind/models/marts/: vendas.sql
northwind/models/raw/crm/: raw_crm__nova_tabela.sql
northwind/models/staging/crm/: _crm__models.yml  _crm__sources.yml  stg_crm__nova_tabela.sql  stg_customers.sql  stg_orders.sql
northwind/seeds/: novatabela.csv
