[tool.poetry]
name = "dbt-bootcamp-northwind"
version = "0.1.0"
description = ""
authors = ["Matheus Andrade <matheusroberto.alvesandrade1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-postgres = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
